Legacy header improvement

--- a/header-old.html
+++ b/header-old.html
@@ -23,9 +23,7 @@
 	<link type="text/css" rel="stylesheet" href="../header.css"/>
 	
 	<nav>
-	<span id="logo">Felix de Boer</span>
-	<a title="index" href="/index.html"><div class="nav_btn">home</div></a>
-	<a href="archive.html"><div class="nav_btn">archive</div></a>
+	<a title="index" href="/index.html"><span id="logo">Felix de Boer</span><br><span id="back_home">back to index</span></a>
 	</nav>
 	<script>
 		// Hide Header on on scroll down
