--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ Felix de Boer
 <a href="#" id="contact_parent"><div>Contact</div></a>
 <a href="#" id="about_parent"><div>About</div></a>
 <div id="posts_expand" class="expand" style="padding: 0; background: none;">
-	<a href="page/sony-devices-you-will-want-now.html"><div class="spotlight"><div class="spotlight_text"><h2>Amazing Sony devices</h2>
-	Some of the coolest products Sony sells now.</div>
-	<div class="spotlight_media"><video src="res/photo/weird_sony/BSP60.mp4" style="max-width: 100%;"autoplay loop controls></video></div>
+	<a href="page/homescreens.html"><div class="spotlight"><div class="spotlight_text"><h2>Homescreens</h2>
+	I like to customize my Android homescreens. Some examples from the past years.</div>
+	<div class="spotlight_media"><img src="res/photo/index/teaser_homescreens.jpg"/></div>
 	</div></a><a href="page/how-to-make-an-emui-30-theme.html"><div class="spotlight"><div class="spotlight_text"><h2>How to make an EMUI 3.0 theme</h2>
 	Everything on making themes for recent Huawei/Honor devices.</div>
 	<div class="spotlight_media"><img src="res/photo/index/theming_preview.png"></div>
