Finished homescreens page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Felix de Boer
 	<div class="spotlight_media"><img src="res/photo/index/teaser_homescreens.jpg"/></div>
 	</div></a><a href="page/how-to-make-an-emui-30-theme.html"><div class="spotlight"><div class="spotlight_text"><h2>How to make an EMUI 3.0 theme</h2>
 	Everything on making themes for recent Huawei/Honor devices.</div>
-	<div class="spotlight_media"><img src="res/photo/index/theming_preview.png"></div>
+	<div class="spotlight_media"><img src="res/photo/index/theming_preview.jpg"></div>
 	</div></a><a href="page/emui_3.0_vs_miui_v6.html"><div class="spotlight"><div class="spotlight_text"><h2>EMUI 3.0 vs. MIUI V6</h2>
 	A short history of Huawei's way of skinning Android and a gallery full of comparison screenshots with Xiaomi's MIUI.</div>
 	<div class="spotlight_media"><img src="http://static.tweakers.net/ext/f/XcKPbq2o2ZdFWmNl8A0dQonL/full.jpg"></div>
