--- a/index.html
+++ b/index.html
@@ -96,21 +96,21 @@ Felix de Boer
 	<li>MATLAB</li>
 	<li>C++ (Arduino programming)</li>
 	<li>LaTeX</li>
-	<li>Adobe Photoshop, Illustrator</li>
+	<li>Adobe Photoshop, Illustrator, InDesign</li>
 	</ul>
 </div>
 <div id="contact_expand" class="expand">
 	<h1>Contact</h1>
 	<p>Twitter: <a href="https://www.twitter.com/fqdeb/" target="_blank">@FQdeB</a><p>
 	<p>E-mail: <script>mail("fqdeboer","ilevn?l",-2,"")</script></p>
-	<p>Telegram: <a href="https://telegram.me/felixdeboer">@FelixDeBoer</a></p>
+	<p>Telegram: <a href="https://telegram.me/felixdeboer">@fqdeb</a></p>
 </div>
 <div id="about_expand" class="expand">
 	<h1>About</h1>
-	<p>Felix de Boer</p>
+	<p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode">cc</a> Felix de Boer</p>
 	<p>2014–2015</p>
-	<p><a href="https://github.com/fqdb/fqdb.github.io">Source code</a></p>
-	<p>Hosted by <a href="https://github.com/pages">Github Pages</p>
+	<p><a href="https://github.com/fqdb/fqdb.github.io">Source code</a><br>
+	Hosted by <a href="https://github.com/pages">Github Pages</p>
 </div>
 <!-- clicky things*/ -->
 <script>
