--- a/resume.html
+++ b/resume.html
@@ -25,9 +25,7 @@
 	<p>At Delft based start-up <a href="http://www.tocano.nl/">Tocano</a>, I programmed a precise 3D positioning rig and executed lab experiments involving a class 4 infrared laser.</p>
 	<h2>Education</h2>
 	<h3>Master Applied Physics, Delft University of Technology</h3>
-	<p><i>2015-2017 (exp.)</i></br>
-	
-	</p>
+	<p><i>2015-2017 (exp.)</i></br></p>
 	<h3>Bachelor Applied Physics, Delft University of Technology</h3>
 	<p><i>2012-2015</i></br>
 	Bachelor thesis: <a href="http://repository.tudelft.nl/view/ir/uuid%3A49963633-ab07-4ca2-a87e-b85d08039880/">Failure mechanisms in lithium silicon batteries</a>
@@ -44,7 +42,7 @@
 	<li>MATLAB</li>
 	<li>C++ (Arduino programming)</li>
 	<li>LaTeX</li>
-	<li>Adobe Photoshop, Illustrator</li>
+	<li>Adobe Photoshop, Illustrator, InDesign</li>
 	</ul>
 </section>
 	
