--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@ Felix de Boer
 <a href="#" id="contact_parent"><div>Contact</div></a>
 <a href="#" id="about_parent"><div>About</div></a>
 <div id="posts_expand" class="expand" style="padding: 0; background: none;">
-	<a href="page/homescreens.html"><div class="spotlight"><div class="spotlight_text"><h2>Homescreens</h2>
+	<a href="page/denmark_learning-danish.html"><div class="spotlight"><div class="spotlight_text"><h2>Learning Danish</h2>
+	I've been learning Danish since about 3 months and I'd like to share my thoughts on the Danish language.</div>
+	<div class="spotlight_media"><img src="res/photo/index/denmark.png"/></div>
+	</div></a><a href="page/homescreens.html"><div class="spotlight"><div class="spotlight_text"><h2>Homescreens</h2>
 	I like to customize my Android homescreens. Some examples from the past years.</div>
 	<div class="spotlight_media"><img src="res/photo/index/teaser_homescreens.jpg"/></div>
 	</div></a><a href="page/how-to-make-an-emui-30-theme.html"><div class="spotlight"><div class="spotlight_text"><h2>How to make an EMUI 3.0 theme</h2>
