--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script language="javascript" src="email.js"></script>
-	<title>Felix de Boer</title>
+	<title>Felix de Boer - 404</title>
 	
 </head>
 <body>
@@ -20,8 +20,8 @@
 	
 	<section id="main">
 	<h1 style="margin-bottom: 0.5em">404</h1>
-	<p style="">The requested page was not found. Please check your address bar again.</p><br />
-	<p><img style="align:center" src="res/404.jpg" />
+	<p style="">The requested page was not found. Please check your address bar or go back.</p><br />
+	<p><img style="align:center" src="http://www.fqdeboer.net/res/404.jpg" />
 	</section>
 	
 	<div id="footer"></div>
