--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@ Felix de Boer
 <a href="#" id="contact_parent"><div>Contact</div></a>
 <a href="#" id="about_parent"><div>About</div></a>
 <div id="posts_expand" class="expand" style="padding: 0; background: none;">
-	<a href="page/denmark/learning-danish.html"><div class="spotlight"><div class="spotlight_text"><h2>Learning Danish</h2>
+	<a href="page/emui_3.0_vs_miui_v6.html"><div class="spotlight"><div class="spotlight_text"><h2>Editing Wikipedia</h2>
+	Why you should become a Wikipedia editor.</div>
+	<div class="spotlight_media"><img src="res/photo/editing-wikipedia/Wikipedia_Michelangelo.JPG"></div>
+	</div></a><a href="page/denmark/learning-danish.html"><div class="spotlight"><div class="spotlight_text"><h2>Learning Danish</h2>
 	I've been learning Danish since about 3 months and I'd like to share my thoughts on the Danish language.</div>
 	<div class="spotlight_media"><img src="res/photo/index/denmark.png"/></div>
 	</div></a><a href="page/homescreens.html"><div class="spotlight"><div class="spotlight_text"><h2>Homescreens</h2>
@@ -68,9 +71,6 @@ Felix de Boer
 	</div></a><a href="page/how-to-make-an-emui-30-theme.html"><div class="spotlight"><div class="spotlight_text"><h2>How to make an EMUI 3.0 theme</h2>
 	Everything on making themes for recent Huawei/Honor devices.</div>
 	<div class="spotlight_media"><img src="res/photo/index/theming_preview.jpg"></div>
-	</div></a><a href="page/emui_3.0_vs_miui_v6.html"><div class="spotlight"><div class="spotlight_text"><h2>EMUI 3.0 vs. MIUI V6</h2>
-	A short history of Huawei's way of skinning Android and a gallery full of comparison screenshots with Xiaomi's MIUI.</div>
-	<div class="spotlight_media"><img src="http://static.tweakers.net/ext/f/XcKPbq2o2ZdFWmNl8A0dQonL/full.jpg"></div>
 	</div></a><a href="page/archive.html" style="margin-bottom: 5em;"><div class="spotlight"><h1 style="vertical-align: center; text-align: center;">more posts</h1>
 	</div></a>
 </div>
