--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Felix de Boer
 <a href="#" id="contact_parent"><div>Contact</div></a>
 <a href="#" id="about_parent"><div>About</div></a>
 <div id="posts_expand" class="expand" style="padding: 0; background: none;">
-	<a href="page/emui_3.0_vs_miui_v6.html"><div class="spotlight"><div class="spotlight_text"><h2>Editing Wikipedia</h2>
+	<a href="page/editing-wikipedia.html"><div class="spotlight"><div class="spotlight_text"><h2>Editing Wikipedia</h2>
 	Why you should become a Wikipedia editor.</div>
 	<div class="spotlight_media"><img src="res/photo/editing-wikipedia/Wikipedia_Michelangelo.JPG"></div>
 	</div></a><a href="page/denmark/learning-danish.html"><div class="spotlight"><div class="spotlight_text"><h2>Learning Danish</h2>
