--- a/index.html
+++ b/index.html
@@ -76,13 +76,18 @@ Felix de Boer
 </div>
 <div id="resume_expand" class="expand">
 	<h1>Resume</h1>
-	<h2>Work experience</h2>
+	<h2>Relavant work experience</h2>
 	<h3>Tocano</h3>
 	<p><i>Summer 2014</i></br></p>
 	<p>At Delft based start-up <a href="http://www.tocano.nl/">Tocano</a>, I programmed a precise 3D positioning rig and executed lab experiments involving a class 4 infrared laser.</p>
 	<h2>Education</h2>
+	<h3>Exchange semester, Technical Univerisity of Denmark</h3>
+	<p><i>Spring 2016</i></p>
+	<p>At <a href="http://www.dtu.dk/">Danmarks Tekniske Universitet</a> (DTU) I am doing an exchange semester to follow some courses not available at TU Delft, to see DTU's area of expertise, and to experience Denmark.</p>
+	<h4>Courses</h4>
+	<ul><li>Experimental Surface Physics</li><li>Hydrogen Energy and Fuel Cells</li><li>Magnetism and Magnetic Materials (jointly given at <a href="http://www.ku.dk/">KU</a>)</li><li>Advanced Matlab Programming</li></ul>
 	<h3>Master Applied Physics, Delft University of Technology</h3>
-	<p><i>2015-2017 (exp.)</i></br></p>
+	<p><i>2015-...(exp.)</i></br></p>
 	<h3>Bachelor Applied Physics, Delft University of Technology</h3>
 	<p><i>2012-2015</i></br>
 	Bachelor thesis: <a href="http://repository.tudelft.nl/view/ir/uuid%3A49963633-ab07-4ca2-a87e-b85d08039880/">Failure mechanisms in lithium silicon batteries</a>
