--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Felix de Boer
 </div>
 <div id="resume_expand" class="expand">
 	<h1>Resume</h1>
-	<h2>Relavant work experience</h2>
+	<h2>Relevant work experience</h2>
 	<h3>Tocano</h3>
 	<p><i>Summer 2014</i></br></p>
 	<p>At Delft based start-up <a href="http://www.tocano.nl/">Tocano</a>, I programmed a precise 3D positioning rig and executed lab experiments involving a class 4 infrared laser.</p>
