--- a/header.html
+++ b/header.html
@@ -19,13 +19,13 @@
 	<meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
 	<meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
 	<meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
-	
 	<link type="text/css" rel="stylesheet" href="../header.css"/>
-	
 	<nav>
 	<span id="logo">Felix de Boer</span>
-	<a title="index" href="/index.html"><div class="nav_btn">home</div></a>
-	<a href="archive.html"><div class="nav_btn">archive</div></a>
+	<div id="nav_btn_wrapper">
+	<a href="archive.html" class="nav_btn"><div>posts</div></a>
+	<a href="/index.html" class="nav_btn"><div>home</div></a>
+	</div>
 	</nav>
 	<script>
 		// Hide Header on on scroll down
