--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Felix de Boer
 	<h4>Courses</h4>
 	<ul><li>Experimental Surface Physics</li><li>Hydrogen Energy and Fuel Cells</li><li>Magnetism and Magnetic Materials (jointly given at <a href="http://www.ku.dk/">KU</a>)</li><li>Advanced Matlab Programming</li></ul>
 	<h3>Master Applied Physics, Delft University of Technology</h3>
-	<p><i>2015-...(exp.)</i></br></p>
+	<p><i>2015-</i></br></p>
 	<h3>Bachelor Applied Physics, Delft University of Technology</h3>
 	<p><i>2012-2015</i></br>
 	Bachelor thesis: <a href="http://repository.tudelft.nl/view/ir/uuid%3A49963633-ab07-4ca2-a87e-b85d08039880/">Failure mechanisms in lithium silicon batteries</a>
@@ -105,6 +105,15 @@ Felix de Boer
 	<li>C++ (Arduino programming)</li>
 	<li>LaTeX</li>
 	<li>Adobe Photoshop, Illustrator, InDesign</li>
+	</ul>
+	<h2>Languages</h2>
+	<span style="size:0.7em;"><br>*<a href="https://en.wikipedia.org/wiki/Common_European_Framework_of_Reference_for_Languages">CEFR</a></span>
+	<ul>
+	<li>Dutch (native)</li>
+	<li>English (C2)</li>
+	<li>German (B2)</li>
+	<li>Chinese (A2)</li>
+	<li>Danish (B1)</li>
 	</ul>
 </div>
 <div id="contact_expand" class="expand">
