Added 'Stats' page (static)

--- a/header.html
+++ b/header.html
@@ -24,7 +24,7 @@
 	<span id="logo">Felix de Boer</span>
 	<div id="nav_btn_wrapper">
 	<a href="archive.html" class="nav_btn"><div>posts</div></a>
-	<a href="/index.html" class="nav_btn"><div>home</div></a>
+	<a href="/index.html" class="nav_btn" id="home_btn"><div>home</div></a>
 	</div>
 	</nav>
 	<script>
