--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@ Felix de Boer
 	<h1>About</h1>
 	<p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode">cc</a> Felix de Boer</p>
 	<p>2014–2016</p>
+	<p><a href="page/stats.html">Stats</a></p>
 	<p><a href="https://github.com/fqdb/fqdb.github.io">Source code</a><br>
 	Hosted by <a href="https://github.com/pages">Github Pages</p>
 </div>
