--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Felix de Boer
 <div id="contact_expand" class="expand">
 	<h1>Contact</h1>
 	<p>Twitter: <a href="https://www.twitter.com/fqdeb/" target="_blank">@FQdeB</a><p>
-	<p>E-mail: <script>mail("fqdeboer","ilevn?l",-2,"")</script></p>
+	<p>E-mail: <script>mail("felix","fqdeboer",2,"")</script></p>
 	<p>Telegram: <a href="https://telegram.me/fqdeb">@fqdeb</a></p>
 </div>
 <div id="about_expand" class="expand">
