added teaser tiel

--- a/index.html
+++ b/index.html
@@ -59,12 +59,9 @@ Felix de Boer
 <a href="#" id="contact_parent"><div>Contact</div></a>
 <a href="#" id="about_parent"><div>About</div></a>
 <div id="posts_expand" class="expand" style="padding: 0; background: none;">
-	<a href="page/editing-wikipedia.html"><div class="spotlight"><div class="spotlight_text"><h2>Editing Wikipedia</h2>
-	Why you should become a Wikipedia editor.</div>
-	<div class="spotlight_media"><img src="res/photo/editing-wikipedia/Wikipedia_Michelangelo.JPG"></div>
-	</div></a><a href="page/denmark/learning-danish.html"><div class="spotlight"><div class="spotlight_text"><h2>Learning Danish</h2>
-	I've been learning Danish since about 3 months and I'd like to share my thoughts on the Danish language.</div>
-	<div class="spotlight_media"><img src="res/photo/index/denmark.png"/></div>
+	</div></a><a href="page/cloud-comparison.html"><div class="spotlight"><div class="spotlight_text"><h2>Comparison of cloud storage services</h2>
+	</div>
+	<div class="spotlight_media"><img src="res/photo/index/the-little-birdy-cloud.jpg"/></div>
 	</div></a><a href="page/homescreens.html"><div class="spotlight"><div class="spotlight_text"><h2>Homescreens</h2>
 	I like to customize my Android homescreens. Some examples from the past years.</div>
 	<div class="spotlight_media"><img src="res/photo/index/teaser_homescreens.jpg"/></div>
