quick layout fix

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@ Felix de Boer
 <a href="#" id="contact_parent"><div>Contact</div></a>
 <a href="#" id="about_parent"><div>About</div></a>
 <div id="posts_expand" class="expand" style="padding: 0; background: none;">
-	</div></a><a href="page/cloud-comparison.html"><div class="spotlight"><div class="spotlight_text"><h2>Comparison of cloud storage services</h2>
-	</div>
-	<div class="spotlight_media"><img src="res/photo/index/the-little-birdy-cloud.jpg"/></div>
-	</div></a><a href="page/homescreens.html"><div class="spotlight"><div class="spotlight_text"><h2>Homescreens</h2>
+	<a href="page/cloud-comparison.html"><div class="spotlight"><div class="spotlight_text"><h2>Comparison of cloud storage services</h2>
+	</div><div class="spotlight_media"><img src="res/photo/index/the-little-birdy-cloud.jpg"/></div>
+	</div></a><a href="page/homescreens.html">
+	<div class="spotlight"><div class="spotlight_text"><h2>Homescreens</h2>
 	I like to customize my Android homescreens. Some examples from the past years.</div>
 	<div class="spotlight_media"><img src="res/photo/index/teaser_homescreens.jpg"/></div>
 	</div></a><a href="page/how-to-make-an-emui-30-theme.html"><div class="spotlight"><div class="spotlight_text"><h2>How to make an EMUI 3.0 theme</h2>
