--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="Felix de Boer,Felix,De Boer,personal,homepage,website,personal website,resume,CV,portfolio">
-	<meta name="description" content="Homepage of Felix de Boer, student at TU Delft." />
+	<meta name="description" content="Website of Felix de Boer, student at TU Delft." />
 	<meta name="robots" content="noarchive" />
 	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
@@ -107,10 +107,10 @@ Felix de Boer
 	<span style="size:0.7em;"><br>*<a href="https://en.wikipedia.org/wiki/Common_European_Framework_of_Reference_for_Languages">CEFR</a></span>
 	<ul>
 	<li>Dutch (native)</li>
-	<li>English (C2)</li>
-	<li>German (B2)</li>
-	<li>Chinese (A2)</li>
-	<li>Danish (B1)</li>
+	<li>English (full proficiency)</li>
+	<li>German (working proficiency)</li>
+	<li>Chinese (intermediate)</li>
+	<li>Danish (intermediate)</li>
 	</ul>
 </div>
 <div id="contact_expand" class="expand">
