--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@ Felix de Boer
 	<h1>Contact</h1>
 	<p>Twitter: <a href="https://www.twitter.com/fqdeb/" target="_blank">@FQdeB</a><p>
 	<p>E-mail: <script>mail("felix","fqdeboer",2,"")</script></p>
-	<p>Telegram: <a href="https://telegram.me/fqdeb">@fqdeb</a></p>
+	<p><a href="https://telegram.me/fqdeb">Telegram</a></p>
+	<p><a href="http://weixin.qq.com/r/R1-37zzEoWHerXiM9wpV">WeChat</a></p>
 </div>
 <div id="about_expand" class="expand">
 	<h1>About</h1>
