Removed legacy pages

--- a/index.html
+++ b/index.html
@@ -42,15 +42,7 @@ Felix de Boer
 <p>Hi, I am a student in Applied Physics (MSc) at Delft University of Technology.</p>
 <noscript>
 	<div style="background: #cc0000; padding: 1em; font-weight: bold; color: white; max-width: 100%; display: inline-block; margin-bottom: 1em;">
-	Wow. <br>JavaScript is not enabled or supported by your browser. The menu does not work now because it uses JavaScript to expand. I'll help you out this time though, you can use the legacy menu below:
-	<div style="background: white; padding: 1em; margin-top: 1em;"
-	<ul>
-		
-		<li><a href="/page/archive.html">Archive</a></li>
-		<li><a href="/resume.html">Resume</a></li>
-		<li><a href="/contact.html">Contact</a></li>
-	</ul>
-	</div>
+	Uh oh. </br>JavaScript is not enabled or supported by your browser. The menu does not work now because it uses JavaScript to expand. Enable JavaScript or use a different device to view this page.
 	</div>
 </noscript>
 <div id="home_menu">
