--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@ Felix de Boer
 <div id="resume_expand" class="expand">
 	<h1>Resume</h1>
 	<h2>Relevant work experience</h2>
+	<h3>Hittech Multin</h3>
+	<p><i>Summer 2017</i></br></p>
+	<p>For 3 months, I assembled ASML's carrier handler at their supplier <a href="http://www.hittech.nl/taal/en/bedrijf/hittech-multin/">Hittech Multin</a>, under cleanroom conditions.</p>
 	<h3>Tocano</h3>
 	<p><i>Summer 2014</i></br></p>
 	<p>At Delft based start-up <a href="http://www.tocano.nl/">Tocano</a>, I programmed a precise 3D positioning rig and executed lab experiments involving a class 4 infrared laser.</p>
