--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@ Felix de Boer
 <a href="#" id="contact_parent"><div>Contact</div></a>
 <a href="#" id="about_parent"><div>About</div></a>
 <div id="posts_expand" class="expand" style="padding: 0; background: none;">
-	<a href="page/cloud-comparison.html"><div class="spotlight"><div class="spotlight_text"><h2>Comparison of cloud storage services</h2>
-	</div><div class="spotlight_media"><img src="res/photo/index/the-little-birdy-cloud.jpg"/></div>
-	</div></a><a href="page/homescreens.html">
-	<div class="spotlight"><div class="spotlight_text"><h2>Homescreens</h2>
+	<a href="res/other/Thorium_as_fuel_in_molten_salt_reactors_2018.pdf">
+	<div class="spotlight"><div class="spotlight_text"><h2>Thorium as a fuel in molten salt reactors (PDF)</h2>
+	An essay giving an overview on thorium fueled molten salt reactors: how they work and what issues need to be solved to commercialize them.</div>
+	<div class="spotlight_media"><img src="res/photo/index/blank.png"/></div>
+	</div></a><a href="page/homescreens.html"><div class="spotlight"><div class="spotlight_text"><h2>Homescreens</h2>
 	I like to customize my Android homescreens. Some examples from the past years.</div>
 	<div class="spotlight_media"><img src="res/photo/index/teaser_homescreens.jpg"/></div>
 	</div></a><a href="page/how-to-make-an-emui-30-theme.html"><div class="spotlight"><div class="spotlight_text"><h2>How to make an EMUI 3.0 theme</h2>
@@ -67,8 +68,8 @@ Felix de Boer
 	<h1>Resume</h1>
 	<h2>Relevant work experience</h2>
 	<h3>Hittech Multin</h3>
-	<p><i>Summer 2017</i></br></p>
-	<p>For 3 months, I assembled ASML's carrier handler at their supplier <a href="http://www.hittech.nl/taal/en/bedrijf/hittech-multin/">Hittech Multin</a>, under cleanroom conditions.</p>
+	<p><i>2017-</i></br></p>
+	<p>At <a href="http://www.hittech.nl/taal/en/bedrijf/hittech-multin/">Hittech Multin</a>, I help assembling components of a semiconductor handling machine under cleanroom conditions.</p>
 	<h3>Tocano</h3>
 	<p><i>Summer 2014</i></br></p>
 	<p>At Delft based start-up <a href="http://www.tocano.nl/">Tocano</a>, I programmed a precise 3D positioning rig and executed lab experiments involving a class 4 infrared laser.</p>
