--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Felix de Boer
 <p>Hi, I am a student in Applied Physics (MSc) at Delft University of Technology.</p>
 <noscript>
 	<div style="background: #cc0000; padding: 1em; font-weight: bold; color: white; max-width: 100%; display: inline-block; margin-bottom: 1em;">
-	Uh oh. </br>JavaScript is not enabled or supported by your browser. The menu does not work now because it uses JavaScript to expand. Enable JavaScript or use a different device to view this page.
+	</br>It seems like JavaScript is not enabled or supported by your browser. The menu does not work now because it uses JavaScript to expand. Enable JavaScript or use a different device to view this page.
 	</div>
 </noscript>
 <div id="home_menu">
@@ -66,10 +66,17 @@ Felix de Boer
 </div>
 <div id="resume_expand" class="expand">
 	<h1>Resume</h1>
+	<p>View on <a href="https://www.linkedin.com/in/fqdeboer/">LinkedIn</a>.</p>
 	<h2>Relevant work experience</h2>
+	<h3>Mapper Lithography</h3>
+	<p><i>2018-</i></br></p>
+	<p>Cleanroom facility checks and maintenance. Documenting technical setups, Planning maintenance and renovation, both technical and organizational.</p>
 	<h3>Hittech Multin</h3>
-	<p><i>2017-</i></br></p>
-	<p>At <a href="http://www.hittech.nl/taal/en/bedrijf/hittech-multin/">Hittech Multin</a>, I help assembling components of a semiconductor handling machine under cleanroom conditions.</p>
+	<p><i>2017-2018</i></br></p>
+	<p>Assembling a mechatronic system for handling semiconductor wafer pods (FOUP).</br> 
+	Logging and creating serial numbers and barcodes. </br>
+	Experience with warehouse processes both physical and in software (Microsoft Dynamics NAV). </br>
+	Discuss and report improvements and issues with project management.</p>
 	<h3>Tocano</h3>
 	<p><i>Summer 2014</i></br></p>
 	<p>At Delft based start-up <a href="http://www.tocano.nl/">Tocano</a>, I programmed a precise 3D positioning rig and executed lab experiments involving a class 4 infrared laser.</p>
@@ -94,13 +101,13 @@ Felix de Boer
 	<li>R & D</li>
 	<li>Data analysis</li>
 	<li>Microscopy</li>
-	<li>MATLAB</li>
+	<li>MATLAB programming</li>
 	<li>C++ (Arduino programming)</li>
 	<li>LaTeX</li>
 	<li>Adobe Photoshop, Illustrator, InDesign</li>
+	<li>QGIS</li>
 	</ul>
 	<h2>Languages</h2>
-	<span style="size:0.7em;"><br>*<a href="https://en.wikipedia.org/wiki/Common_European_Framework_of_Reference_for_Languages">CEFR</a></span>
 	<ul>
 	<li>Dutch (native)</li>
 	<li>English (full proficiency)</li>
@@ -113,8 +120,7 @@ Felix de Boer
 	<h1>Contact</h1>
 	<p>Twitter: <a href="https://www.twitter.com/fqdeb/" target="_blank">@FQdeB</a><p>
 	<p>E-mail: <script>mail("felix","fqdeboer",2,"")</script></p>
-	<p><a href="https://telegram.me/fqdeb">Telegram</a></p>
-	<p><a href="http://weixin.qq.com/r/R1-37zzEoWHerXiM9wpV">WeChat</a></p>
+	<p><a href="https://telegram.me/FelixQ">Telegram</a></p>
 </div>
 <div id="about_expand" class="expand">
 	<h1>About</h1>
