--- a/index.html
+++ b/index.html
@@ -58,9 +58,6 @@ Felix de Boer
 	</div></a><a href="page/homescreens.html"><div class="spotlight"><div class="spotlight_text"><h2>Homescreens</h2>
 	I like to customize my Android homescreens. Some examples from the past years.</div>
 	<div class="spotlight_media"><img src="res/photo/index/teaser_homescreens.jpg"/></div>
-	</div></a><a href="page/how-to-make-an-emui-30-theme.html"><div class="spotlight"><div class="spotlight_text"><h2>How to make an EMUI 3.0 theme</h2>
-	Everything on making themes for recent Huawei/Honor devices.</div>
-	<div class="spotlight_media"><img src="res/photo/index/theming_preview.jpg"></div>
 	</div></a><a href="page/archive.html" style="margin-bottom: 5em;"><div class="spotlight"><h1 style="vertical-align: center; text-align: center;">more posts</h1>
 	</div></a>
 </div>
@@ -101,33 +98,33 @@ Felix de Boer
 	<li>R & D</li>
 	<li>Data analysis</li>
 	<li>Microscopy</li>
-	<li>MATLAB programming</li>
-	<li>C++ (Arduino programming)</li>
-	<li>LaTeX</li>
+	<li>Safety analysis</li>
+	<li>MATLAB</li>
+	<li>C</li>
+	<li>C++ (Arduino)</li>
+	<li>TeX</li>
 	<li>Adobe Photoshop, Illustrator, InDesign</li>
-	<li>QGIS</li>
+	<li>QGIS, Openstreetmap</li>
 	</ul>
 	<h2>Languages</h2>
 	<ul>
 	<li>Dutch (native)</li>
 	<li>English (full proficiency)</li>
-	<li>German (working proficiency)</li>
-	<li>Chinese (intermediate)</li>
-	<li>Danish (intermediate)</li>
+	<li>German (intermediate)</li>
+	<li>Chinese (basic conversational skills)</li>
+	<li>Danish (elementary)</li>
+	<li>Vietnamese (elementary)</li>
 	</ul>
 </div>
 <div id="contact_expand" class="expand">
 	<h1>Contact</h1>
-	<p>Twitter: <a href="https://www.twitter.com/fqdeb/" target="_blank">@FQdeB</a><p>
 	<p>E-mail: <script>mail("felix","fqdeboer",2,"")</script></p>
 	<p><a href="https://telegram.me/FelixQ">Telegram</a></p>
 </div>
 <div id="about_expand" class="expand">
 	<h1>About</h1>
 	<p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode">cc</a> Felix de Boer</p>
-	<p>2014–2018</p>
-	<p><a href="page/stats.html">Stats</a></p>
-	<p><a href="page/design.html">Design</a></p>
+	<p>2014–2019</p>
 	<p><a href="https://github.com/fqdb/fqdb.github.io">Source code</a><br>
 	Hosted by <a href="https://github.com/pages">Github Pages</p>
 </div>
