--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ Felix de Boer
 </noscript>
 <div id="home_menu">
 <a href="#" id="posts_parent"><div>Posts</div></a>
+<a href="/tileserver" id="tileserver"><div>Tileserver</div></a>
+<a href="/nextcloud" id="nextcloud"><div>Nextcloud</div></a>	
 <a href="#" id="resume_parent"><div>Resume</div></a>
 <a href="#" id="contact_parent"><div>Contact</div></a>
 <a href="#" id="about_parent"><div>About</div></a>
@@ -119,12 +121,11 @@ Felix de Boer
 <div id="contact_expand" class="expand">
 	<h1>Contact</h1>
 	<p>E-mail: <script>mail("felix","fqdeboer",2,"")</script></p>
-	<p><a href="https://telegram.me/FelixQ">Telegram</a></p>
 </div>
 <div id="about_expand" class="expand">
 	<h1>About</h1>
 	<p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode">cc</a> Felix de Boer</p>
-	<p>2014–2019</p>
+	<p>2014–2020</p>
 	<p><a href="https://github.com/fqdb/fqdb.github.io">Source code</a><br>
 	Hosted by <a href="https://github.com/pages">Github Pages</p>
 </div>
