--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ Felix de Boer
 </noscript>
 <div id="home_menu">
 <a href="#" id="posts_parent"><div>Posts</div></a>
-<a href="/tileserver" id="tileserver"><div>Tileserver</div></a>
-<a href="/nextcloud" id="nextcloud"><div>Nextcloud</div></a>	
+<a href="tileserver" id="tileserver"><div>Tileserver</div></a>
+<a href="nextcloud" id="nextcloud"><div>Nextcloud</div></a>	
 <a href="#" id="resume_parent"><div>Resume</div></a>
 <a href="#" id="contact_parent"><div>Contact</div></a>
 <a href="#" id="about_parent"><div>About</div></a>
@@ -66,19 +66,10 @@ Felix de Boer
 <div id="resume_expand" class="expand">
 	<h1>Resume</h1>
 	<p>View on <a href="https://www.linkedin.com/in/fqdeboer/">LinkedIn</a>.</p>
-	<h2>Relevant work experience</h2>
-	<h3>Mapper Lithography</h3>
+	<!--<h2>Relevant work experience</h2>
+	<h3>Some company</h3>
 	<p><i>2018-</i></br></p>
-	<p>Cleanroom facility checks and maintenance. Documenting technical setups, Planning maintenance and renovation, both technical and organizational.</p>
-	<h3>Hittech Multin</h3>
-	<p><i>2017-2018</i></br></p>
-	<p>Assembling a mechatronic system for handling semiconductor wafer pods (FOUP).</br> 
-	Logging and creating serial numbers and barcodes. </br>
-	Experience with warehouse processes both physical and in software (Microsoft Dynamics NAV). </br>
-	Discuss and report improvements and issues with project management.</p>
-	<h3>Tocano</h3>
-	<p><i>Summer 2014</i></br></p>
-	<p>At Delft based start-up <a href="http://www.tocano.nl/">Tocano</a>, I programmed a precise 3D positioning rig and executed lab experiments involving a class 4 infrared laser.</p>
+	<p>Some text</p>
 	<h2>Education</h2>
 	<h3>Exchange semester, Technical Univerisity of Denmark</h3>
 	<p><i>Spring 2016</i></p>
@@ -93,39 +84,17 @@ Felix de Boer
 	</p>
 	<p>
 	<a href="http://repository.tudelft.nl/view/ir/uuid%3A49963633-ab07-4ca2-a87e-b85d08039880/"><img src="res/photo/resume/cover.jpg" style="max-width: 50%"></a>
-	</p>
-	
-	<h2>Some subjects I'm experienced in</h2>
-	<ul>
-	<li>R & D</li>
-	<li>Data analysis</li>
-	<li>Microscopy</li>
-	<li>Safety analysis</li>
-	<li>MATLAB</li>
-	<li>C</li>
-	<li>C++ (Arduino)</li>
-	<li>TeX</li>
-	<li>Adobe Photoshop, Illustrator, InDesign</li>
-	<li>QGIS, Openstreetmap</li>
-	</ul>
-	<h2>Languages</h2>
-	<ul>
-	<li>Dutch (native)</li>
-	<li>English (full proficiency)</li>
-	<li>German (intermediate)</li>
-	<li>Chinese (basic conversational skills)</li>
-	<li>Danish (elementary)</li>
-	<li>Vietnamese (elementary)</li>
-	</ul>
+	</p>-->
+
 </div>
 <div id="contact_expand" class="expand">
 	<h1>Contact</h1>
-	<p>E-mail: <script>mail("felix","fqdeboer",2,"")</script></p>
+	<p>E-mail: <script>mail("fqdeboer","live",2,"")</script></p>
 </div>
 <div id="about_expand" class="expand">
 	<h1>About</h1>
 	<p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode">cc</a> Felix de Boer</p>
-	<p>2014–2020</p>
+	<p>2014-2020</p>
 	<p><a href="https://github.com/fqdb/fqdb.github.io">Source code</a><br>
 	Hosted by <a href="https://github.com/pages">Github Pages</p>
 </div>
