--- a/404.html
+++ b/404.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<script src="jquery-2.1.1.js"></script>
-	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-	<link type="text/css" rel="stylesheet" href="fonts.css"/>
+	<link type="text/css" rel="stylesheet" href="/stylesheet.css"/>
+	<link type="text/css" rel="stylesheet" href="/fonts.css"/>
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script language="javascript" src="email.js"></script>
@@ -21,7 +21,7 @@
 	<section id="main">
 	<h1 style="margin-bottom: 0.5em">404</h1>
 	<p style="">The requested page was not found. Please check your address bar or go back.</p><br />
-	<p><img style="align:center" src="http://www.fqdeboer.net/res/404.jpg" />
+	<p><img style="align:center; max-width: 100%;" src="/404UnicornNotFound.svg" />
 	</section>
 	
 	<div id="footer"></div>
