--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@ Felix de Boer
 </noscript>
 <div id="home_menu">
 <a href="#" id="posts_parent"><div>Posts</div></a>
-<a href="tileserver" id="tileserver"><div>Tileserver</div></a>
-<a href="nextcloud" id="nextcloud"><div>Nextcloud</div></a>	
 <a href="#" id="resume_parent"><div>Resume</div></a>
 <a href="#" id="contact_parent"><div>Contact</div></a>
 <a href="#" id="about_parent"><div>About</div></a>
@@ -93,10 +91,8 @@ Felix de Boer
 </div>
 <div id="about_expand" class="expand">
 	<h1>About</h1>
-	<p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode">cc</a> Felix de Boer</p>
-	<p>2014-2020</p>
-	<p><a href="https://github.com/fqdb/fqdb.github.io">Source code</a><br>
-	Hosted by <a href="https://github.com/pages">Github Pages</p>
+	<p>All rights reserved unless stated otherwise</p>
+	<p>2014-2022</p>
 </div>
 <!-- clicky things*/ -->
 <script>
